# crablets-web

./: Cargo.toml  app-86e5b1f1a75a36dd.js  app-9ac6134af38c644c.js  app-9ac6134af38c644c_bg.wasm  index.html
crates/app/: Cargo.toml
crates/app/src/: app.rs  lib.rs  main.rs  prelude.rs  profiler.rs
crates/app/src/app/: commands.rs  edit_window.rs  inspector.rs
crates/app/src/asset_loading/: asset_dir.rs  atlas_loading.rs  mod.rs
crates/app/src/core_game/: buffer.rs  camera.rs  crablet.rs  drawing.rs  ed_mode.rs  factory.rs  factory_prototypes.rs  game_state.rs  id.rs  inputs.rs  list.rs  mod.rs  navigation.rs  nominal.rs  resource.rs  result.rs  settings.rs  stats.rs  task.rs  tile.rs  tilemap.rs  timer.rs  vec2d.rs  wire_format.rs
crates/app/src/core_game/systems/: congestion.rs  grow_crops.rs  handle_input.rs  mod.rs  resource_reservation.rs  taskman.rs  tick_factories.rs
crates/app/src/renderer/: egui_canvas.rs  instance_data.rs  mod.rs  renderer.rs  scenegraph.rs  sprite.rs  storage_buffer.rs  texture.rs  uniform_data.rs
crates/app/src/renderer/shaders/: custom3d_wgpu_shader.wgsl  quads.wgsl  shader_pack.rs
crates/app/src/util/: bounds.rs  mod.rs
crates/core_util/: Cargo.toml
crates/core_util/src/: replace_with.rs  with.rs
crates/matrix/: Cargo.toml
crates/matrix/src/: lib.rs  matrix3.rs  matrix4.rs  transforms.rs
crates/vector/: Cargo.toml
crates/vector/src/: lib.rs
