[workspace]
resolver = "2"

members = [
	"crates/core_util",
	"crates/app",
	"crates/sys_io",
	"crates/vector",
	"crates/matrix",
]

[profile.release]
panic = "unwind"
debug = false

[profile.fast]
inherits = "dev"
panic = "unwind"
debug = true
lto = "off"
opt-level = 1
debug-assertions = true
overflow-checks = false
incremental = true

[profile.fast.package."*"]
inherits = "release"

[profile.dev.package."*"]
inherits = "release"