[package]
name = "app"
version = "1.0.0"
authors = ["Arne V <barnex@gmail.com>"]
edition = "2021"
#rust-version = "1.72"

[dependencies]
core_util = { path = "../core_util" }
matrix = { path = "../matrix" }
sys_io = { path = "../sys_io" }
vector = { path = "../vector" }

anyhow = "1"
ahash = { version = "0.8.7", default_features = false, features = ["no-rng"] }
bevy_reflect = { version = "0.12.1", features = ["smol_str", "smallvec"] }
bytemuck = "1"
eframe = { version = "0.27.1", default-features = false, features = [
	"persistence",
	"default_fonts",
	"wgpu",
] }
egui = { version = "0.27.1", features = ["persistence", "log"] }
log = "0.4"
once_cell = "1"
rmp-serde = "1.1"
serde = { version = "1", features = ["derive"] }
image = { version = "0.24", default_features = false, features = ["png"] }
itertools = "0.12"
rand = "0.8.5"
rand_xoshiro = "0.6"
smallvec = { version = "1", features = [
	"serde",
	"const_new",
	"const_generics",
	"write",
	"union",
] }
smol_str = { version = "*", features = ["serde"] }
num-traits = "0.2"
num-derive = "0.4"
web-time = "1.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
