[package]
name = "matrix"
version = "1.0.0"
authors = ["Arne Vansteenkiste <barnex@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
vector = { path = "../vector" }
bytemuck = { version = "1", features = ["min_const_generics"] }
bevy_reflect = { version = "0.12.1", features = [] }
