[package]
name = "vector"
version = "2.0.0"
authors = ["Arne Vansteenkiste <barnex@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
bytemuck = { version = "1", features = ["min_const_generics"] }
bevy_reflect = {version = "0.12", features = []}
num-traits = "0.2"
